--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -2,11 +2,7 @@ execution.convert.start.start_conversion=\u958B\u59CB\u8F49\u6A94\u4F5C\u696D
 handler.exception.conversion.conversion=\u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s
 handler.exception.conversion.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s
 handler.exception.conversion.read_image=\u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s -> %s
-handler.exception.dirlist_task_factory.dirlist.not_found=\u627E\u4E0D\u5230Dirlist\u6A94\u6848\uFF1A %s
-handler.exception.dirlist_task_factory.dirlist.wrong_type=\u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s
 handler.exception.dirlist_task_factory.source.empty_image=%s \uFF1A \u627E\u4E0D\u5230\u4EFB\u4F55\u5716\u6A94
-handler.exception.dirlist_task_factory.source.not_found=%s \uFF1A \u627E\u4E0D\u5230\u4F86\u6E90\u6A94\u6848
-handler.exception.dirlist_task_factory.source.wrong_type=%s \uFF1A \u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s'
 handler.exception.parameter.missing_required.option = \u907A\u5931\u5FC5\u8981\u9078\u9805\uFF1A '%s'
 handler.exception.parameter.missing_required.parameter = \u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A '%s'
 public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
@@ -51,9 +47,14 @@ public.parameter = \u53C3\u6578
 handler.exception.conversion.invalid_file=\u7121\u6548\u6A94\u6848\uFF1A %s -> %s
 handler.exception.dirlist_task_factory.source.no_map_pattern=%s \uFF1A \u6C92\u6709\u5C0D\u61C9\u7684Pattern\u503C\uFF1A%s
 handler.exception.io.file.FileNotExistsException=\u627E\u4E0D\u5230\u6A94\u6848 \uFF1A %s
-handler.exception.io.file.WrongFileTypeException=\u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s
+handler.exception.io.file.WrongFileTypeException=\u8DEF\u5F91\u5FC5\u9808\u662F%s,\u4F46\u537B\u662F%s: %s
 handler.exception.io.file.InvalidFileException=\u7121\u6548\u6A94\u6848 \uFF1A %s
-handler.exception.io.file.NoParentException=\u6C92\u6709\u7236\u8CC7\u6599\u593E : %s\
+handler.exception.io.file.NoParentException=\u6C92\u6709\u7236\u8CC7\u6599\u593E : %s
+public.at_line=\u5728\u7B2C %d \u884C
+execution.convert.start.parsing=\u89E3\u6790\u76EE\u9304\u5217\u8868 \uFF1A %s
+execution.convert.start.parsed=\u5728 %2$s \u4E2D\u627E\u5230 %1$d \u500B\u6A94\u6848 
+
+
 
 
 
