Handle FileException in PDFConverterException.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -52,7 +52,9 @@ handler.exception.io.file.InvalidFileException=\u7121\u6548\u6A94\u6848 \uFF1A %
 handler.exception.io.file.NoParentException=\u6C92\u6709\u7236\u8CC7\u6599\u593E : %s
 public.at_line=\u5728\u7B2C %d \u884C
 execution.convert.start.parsing=\u89E3\u6790\u76EE\u9304\u5217\u8868 \uFF1A %s
-execution.convert.start.parsed=\u5728 %2$s \u4E2D\u627E\u5230 %1$d \u500B\u6A94\u6848 
+execution.convert.start.parsed=\u5728 %2$s \u4E2D\u627E\u5230 %1$d \u500B\u6A94\u6848
+handler.exception.io.file.OverwriteException=\u62D2\u7D55\u8986\u5BEB \uFF1A %s
+public.at_file=\u6A94\u6848 %s
 
 
 
