--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -1,25 +1,16 @@
-execution.convert.start.start_conversion=\u958B\u59CB\u8F49\u6A94\u4F5C\u696D
-handler.exception.conversion.conversion=\u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s
-handler.exception.conversion.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s
-handler.exception.conversion.read_image=\u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s -> %s
-handler.exception.dirlist_task_factory.source.empty_image=%s \uFF1A \u627E\u4E0D\u5230\u4EFB\u4F55\u5716\u6A94
-handler.exception.parameter.missing_required.option = \u907A\u5931\u5FC5\u8981\u9078\u9805\uFF1A '%s'
-handler.exception.parameter.missing_required.parameter = \u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A '%s'
-public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
-handler.exception.parameter.type_convert.enum = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A\u53EF\u8F38\u5165[%s] \u4F46\u662F\u537B\u662F '%s'
-handler.exception.parameter.type_convert.normal = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A%s(\u7121\u6548\u503C)
-handler.exception.parameter.unmatched_argument.unknown_option=\u672A\u77E5\u9078\u9805 : %s
+execution.convert.start.parsed=\u5728 %2$s \u4E2D\u627E\u5230 %1$d \u500B\u76EE\u9304
+execution.convert.start.parsing = \u89E3\u6790\u76EE\u9304\u5217\u8868 \uFF1A %s
+execution.convert.start.start_conversion = \u958B\u59CB\u8F49\u6A94\u4F5C\u696D
 
 help = \u7372\u53D6\u66F4\u591A\u8CC7\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A
 
+img2pdf.convert.<sourceFiles>[0..*] = \u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
 img2pdf.convert.<tasklist_sources>[0.*] = Tasklist\u4F4D\u7F6E
+img2pdf.convert.filter = \u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.list_destination = \u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
 img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.open_when_complete = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
 img2pdf.convert.overwrite = \u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848
-img2pdf.convert.temp_folder = \u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.convert.<sourceFiles>[0..*] = \u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
-img2pdf.convert.filter = \u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.convert.list_destination = \u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
 img2pdf.convert.pdf_align = \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.pdf_auto_rotate = \u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
 img2pdf.convert.pdf_destination = \u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
@@ -32,31 +23,16 @@ img2pdf.convert.pdf_size.1 = \u53EF\u9078\u64C7\u7684\u9078\u9805\uFF1A ${COMPLE
 img2pdf.convert.pdf_user_password = PDF\u7528\u6236\u5BC6\u78BC\u3002
 img2pdf.convert.sorter = \u6307\u5B9A\u6392\u5E8F\u6A21\u5F0F\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.source = \u4F86\u6E90\u6A94\u6848
+img2pdf.convert.temp_folder = \u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.usage.header = \u5EFA\u7ACB\u4E00\u500B\u5305\u542B\u6A94\u6848\u4F4D\u7F6E\u3001\u9801\u9762\u5C6C\u6027\u3001\u6587\u4EF6\u5C6C\u6027\u7684XML\u6A94\u3002
 img2pdf.debug = \u958B\u555F\u5075\u932F\u6A21\u5F0F
 img2pdf.usage.header = \u6B64\u7A0B\u5F0F\u53EF\u4EE5\u5C07\u591A\u500B\u5716\u50CF\u8F49\u63DB\u70BAPDF\u3002
 img2pdf.version = \u986F\u793A\u7248\u672C\u8CC7\u8A0A
 
+public.at_file = \u6A94\u6848 %s
+public.at_line = \u5728\u7B2C %d \u884C
+public.exported = \u5DF2\u532F\u51FA
 public.file.type.file = \u6A94\u6848
 public.file.type.folder = \u8CC7\u6599\u593E
-public.exported = \u5DF2\u532F\u51FA
 public.imported = \u5DF2\u532F\u5165
 public.importing = \u532F\u5165
-public.option = \u9078\u9805
-public.parameter = \u53C3\u6578
-handler.exception.conversion.invalid_file=\u7121\u6548\u6A94\u6848\uFF1A %s -> %s
-handler.exception.dirlist_task_factory.source.no_map_pattern=%s \uFF1A \u6C92\u6709\u5C0D\u61C9\u7684Pattern\u503C\uFF1A%s
-handler.exception.io.file.FileNotExistsException=\u627E\u4E0D\u5230\u6A94\u6848 \uFF1A %s
-handler.exception.io.file.WrongFileTypeException=\u8DEF\u5F91\u5FC5\u9808\u662F%s,\u4F46\u537B\u662F%s: %s
-handler.exception.io.file.InvalidFileException=\u7121\u6548\u6A94\u6848 \uFF1A %s
-handler.exception.io.file.NoParentException=\u6C92\u6709\u7236\u8CC7\u6599\u593E : %s
-public.at_line=\u5728\u7B2C %d \u884C
-execution.convert.start.parsing=\u89E3\u6790\u76EE\u9304\u5217\u8868 \uFF1A %s
-execution.convert.start.parsed=\u5728 %2$s \u4E2D\u627E\u5230 %1$d \u500B\u6A94\u6848
-handler.exception.io.file.OverwriteException=\u62D2\u7D55\u8986\u5BEB \uFF1A %s
-public.at_file=\u6A94\u6848 %s
-
-
-
-
-
