--- a/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
@@ -1,3 +1,4 @@
+handler.error.OutOfMemoryError=\u61C9\u7528\u7A0B\u5F0F\u7684\u8A18\u61B6\u9AD4\u7528\u91CF\u8D85\u904EJVM\u6700\u5927\u8A18\u61B6\u9AD4\u7528\u91CF \uFF1A %s 
 handler.exception.conversion.conversion = \u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s
 handler.exception.conversion.invalid_file = \u7121\u6548\u6A94\u6848\uFF1A %s -> %s
 handler.exception.conversion.overwrite = \u62D2\u7D55\u8986\u5BEB\uFF1A %s
