--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -6,7 +6,7 @@ help = \u7372\u53D6\u66F4\u591A\u8CC7\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A
 
 img2pdf.convert.<sourceFiles>[0..*] = \u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
 img2pdf.convert.<tasklist_sources>[0.*] = Tasklist\u4F4D\u7F6E
-img2pdf.convert.filter = \u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528Glob\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.list_destination = \u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
 img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.open_when_complete = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
