--- a/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
@@ -12,7 +12,7 @@ handler.exception.io.file.OverwriteException = \u62D2\u7D55\u8986\u5BEB \uFF1A %
 handler.exception.io.file.WrongFileTypeException = \u8DEF\u5F91\u5FC5\u9808\u662F%s,\u4F46\u537B\u662F%s: %s
 handler.exception.parameter.missing_required.option = \u907A\u5931\u5FC5\u8981\u9078\u9805\uFF1A '%s'
 handler.exception.parameter.missing_required.parameter = \u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A '%s'
-handler.exception.parameter.try_help=\u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002\
+handler.exception.parameter.try_help=\u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
 
 handler.exception.parameter.type_convert.enum = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A\u53EF\u8F38\u5165[%s] \u4F46\u662F\u537B\u662F '%s'
 handler.exception.parameter.type_convert.normal = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A%s(\u7121\u6548\u503C)
@@ -23,3 +23,5 @@ public.file.type.folder = \u8CC7\u6599\u593E
 public.option = \u9078\u9805
 public.parameter = \u53C3\u6578
 public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+public.at_file = \u6A94\u6848 %s
+public.at_line = \u5728\u7B2C %d \u884C
