Handle missing required subcommand.

--- a/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
@@ -25,3 +25,4 @@ public.parameter = \u53C3\u6578
 public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
 public.at_file = \u6A94\u6848 %s
 public.at_line = \u5728\u7B2C %d \u884C
+handler.exception.parameter.missing_required_subcommand=\u907A\u5931\u5FC5\u8981\u5B50\u547D\u4EE4
