--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -4,7 +4,8 @@ execution.convert.start.start_conversion = \u958B\u59CB\u8F49\u6A94\u4F5C\u696D
 help=\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u8CC7\u8A0A
 img2pdf.convert.<sourceFiles>[0..*]=\u6587\u5B57\u6A94(\u5EFA\u8B70\u662FUTF-8\u7DE8\u78BC)\uFF0C\u88E1\u9762\u689D\u5217\u8457\u55AE\u500B\u6216\u591A\u500B\u8981\u8F49\u63DB\u6210PDF\u7684\u76EE\u9304\u8DEF\u5F91
 
-img2pdf.convert.filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528Glob\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.filter.0=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528Glob\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.filter.1=*.{jpg,png,bmp} \u5C07\u6703\u7BE9\u9078\u51FA\u50CF\u662F"test.jpg"\u548C"hello world.bmp"\u7B49\u542B\u6709jpg\u6216png\u6216bmp\u9644\u6A94\u540D\u7684\u6A94\u6848\u3002
 img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.open_when_complete = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
 img2pdf.convert.overwrite=\u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
