--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -9,8 +9,8 @@ img2pdf.convert.filter.1=*.{jpg,png,bmp} \u5C07\u6703\u7BE9\u9078\u51FA\u50CF\u6
 img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.overwrite=\u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.pdf_align = \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.convert.pdf_auto_rotate=\u7576\u5716\u7247\u662F\u6A6B\u5411\u6642\u81EA\u52D5\u65CB\u8F49PDF\u9801\u9762\u3002
-img2pdf.convert.pdf_destination.0=\u5DF2\u5B8C\u6210\u8F49\u6A94\u7684PDF\u76EE\u7684\u5730\u3002
+img2pdf.convert.pdf_auto_rotate=\u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.pdf_destination.0=\u5DF2\u5B8C\u6210\u8F49\u6A94\u7684PDF\u76EE\u7684\u5730\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.pdf_destination.1=\  \u53EF\u4EE5\u4F7F\u7528\u4EE5\u4E0B\u81EA\u52D5\u5B9A\u7FA9\u503C\uFF1A
 img2pdf.convert.pdf_destination.2=\    - <NAME> : \u76EE\u9304\u5217\u8868\u88E1\u7684\u8CC7\u6599\u593E\u540D\u7A31\n
 img2pdf.convert.pdf_destination.3=\    - <PARENT{N}> : <NAME>\u8DEF\u5F91\u7684\u4E0A\u7B2CN+1\u500B\u4E0A\u5C64\u8CC7\u6599\u593E\u3002N\u5F9E0\u958B\u59CB\u3002\n
