Allow to handle DirectoryTaskFactoryProcessException

--- a/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/handler_zh_TW.properties
@@ -1,10 +1,11 @@
+public.at_line=\u5728 %d 
 handler.error.OutOfMemoryError=\u61C9\u7528\u7A0B\u5F0F\u7684\u8A18\u61B6\u9AD4\u7528\u91CF\u8D85\u904EJVM\u6700\u5927\u8A18\u61B6\u9AD4\u7528\u91CF \uFF1A %s 
 handler.exception.conversion.conversion = \u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s
 handler.exception.conversion.invalid_file = \u7121\u6548\u6A94\u6848\uFF1A %s -> %s
 handler.exception.conversion.overwrite = \u62D2\u7D55\u8986\u5BEB\uFF1A %s
 handler.exception.conversion.read_image = \u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s -> %s -> %s
-handler.exception.dirlist_task_factory.source.empty_image = %s \uFF1A \u627E\u4E0D\u5230\u4EFB\u4F55\u5716\u6A94
-handler.exception.dirlist_task_factory.source.no_map_pattern = %s \uFF1A \u6C92\u6709\u5C0D\u61C9\u7684Pattern\u503C\uFF1A%s
+handler.exception.dirlist_task_factory.source.empty_image=\u627E\u4E0D\u5230\u4EFB\u4F55\u5716\u6A94
+handler.exception.dirlist_task_factory.source.no_map_pattern=\u6C92\u6709\u5C0D\u61C9\u7684Pattern\u503C\uFF1A%s
 handler.exception.io.file.FileNotExistsException = \u627E\u4E0D\u5230\u6A94\u6848 \uFF1A %s
 handler.exception.io.file.InvalidFileException = \u7121\u6548\u6A94\u6848 \uFF1A %s
 handler.exception.io.file.NoParentException = \u6C92\u6709\u7236\u8CC7\u6599\u593E : %s
@@ -24,5 +25,4 @@ public.option = \u9078\u9805
 public.parameter = \u53C3\u6578
 public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
 public.at_file = \u6A94\u6848 %s
-public.at_line = \u5728\u7B2C %d \u884C
 handler.exception.parameter.missing_required_subcommand=\u907A\u5931\u5FC5\u8981\u5B50\u547D\u4EE4
